[gd_scene load_steps=17 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://FancyBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://GOPanel.gd" type="Script" id=3]
[ext_resource path="res://Assets/Music/SoftRed.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Fonts/GameOver.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Theme/GameOver.tres" type="Theme" id=6]
[ext_resource path="res://Restart.gd" type="Script" id=7]
[ext_resource path="res://Assets/Symbols/fullscreen.png" type="Texture" id=8]
[ext_resource path="res://FullscreenButton.gd" type="Script" id=9]
[ext_resource path="res://Assets/Symbols/music-on.png" type="Texture" id=10]
[ext_resource path="res://MusicButton.gd" type="Script" id=11]
[ext_resource path="res://CloseButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Sounds/Click.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Characters/player2.png" type="Texture" id=14]
[ext_resource path="res://Winner.gd" type="Script" id=15]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 129.832, 78.7813 )
z_index = 5
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Shadow Panel" type="Panel" parent="."]
modulate = Color( 0.352941, 0.313726, 0.313726, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 73.6133
margin_top = 39.5844
margin_right = 113.613
margin_bottom = 79.5844
rect_scale = Vector2( 3.077, 2.182 )

[node name="Main Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 69.1335
margin_top = 35.6316
margin_right = 109.133
margin_bottom = 75.6316
rect_scale = Vector2( 3.07735, 2.18245 )
script = ExtResource( 3 )
shadow = NodePath("../Shadow Panel")
restartButton = NodePath("../Restart")

[node name="Timer" type="Timer" parent="Main Panel"]
wait_time = 1.33
one_shot = true
autostart = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
autoplay = true
bus = "Music"

[node name="Game Over" type="Label" parent="."]
margin_left = 36.163
margin_top = 46.869
margin_right = 99.163
margin_bottom = 77.869
rect_scale = Vector2( 3.077, 2.182 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 5 )
text = "GAME
OVER"
align = 1
valign = 1

[node name="Restart" type="Button" parent="."]
margin_left = 97.1553
margin_top = 116.933
margin_right = 167.155
margin_bottom = 136.933
theme = ExtResource( 6 )
text = " Restart? "
script = ExtResource( 7 )

[node name="Fullscreen Button" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 43.7669
margin_top = 35.8126
margin_right = 63.7669
margin_bottom = 55.8126
theme = ExtResource( 6 )
icon = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Music Button" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 44.0048
margin_top = 61.9736
margin_right = 64.0048
margin_bottom = 81.9736
theme = ExtResource( 6 )
icon = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Close Button" parent="." instance=ExtResource( 12 )]

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -22.857
bus = "SFX"

[node name="Winner" type="Sprite" parent="."]
position = Vector2( 52.4797, 115.042 )
texture = ExtResource( 14 )
script = ExtResource( 15 )
[connection signal="timeout" from="Main Panel/Timer" to="Main Panel" method="_on_Timer_timeout"]
[connection signal="pressed" from="Restart" to="Restart" method="_on_Restart_pressed"]
[connection signal="button_down" from="Fullscreen Button" to="Fullscreen Button" method="_on_Fullscreen_Button_button_down"]
[connection signal="button_up" from="Fullscreen Button" to="Fullscreen Button" method="_on_Fullscreen_Button_button_up"]
[connection signal="button_down" from="Music Button" to="Music Button" method="_on_Music_Button_button_down"]
[connection signal="button_up" from="Music Button" to="Music Button" method="_on_Music_Button_button_up"]
